# OpenKernel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAGIC_AI_SHOWCASE.md  PRODUCTION_READY_SUMMARY.md  PROJECT_OVERVIEW.md  PUBLICATION_CHECKLIST.md  PUBLICATION_SUMMARY.md  README.md  SECURITY.md  demo_script.py  docker-compose.yml  final_validation.py  openkernel.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
monitoring/: prometheus.yml
openkernel/: __init__.py  cli.py  core.py  cuda.py  data.py  deployment.py  inference.py  monitoring.py  py.typed  research.py  training.py
scripts/: setup.sh
tests/: conftest.py  test_openkernel.py
